# cove-ocds

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile_django  Dockerfile_static  LICENSE  README.md  README.rst  default.conf  pyproject.toml  pytest.ini  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg
.github/workflows/: ci.yml  docker.yml  i18n.yml  lint.yml
.tx/: config
core/: context_processors.py  settings.py  urls.py
core/templates/: terms.html
cove_ocds/: exceptions.py  forms.py  html_error_msg.py  middleware.py  models.py  test_hypothesis.py  test_input.py  tests.py  tests_functional.py  unflatten.py  util.py  views.py
cove_ocds/fixtures/: 1001_empty_releases.json  SOURCES  badfile_all_validation_errors_results.json  badfile_extension_validation_errors.json  extended_many_jsonschema_keys.json  tenders_1_release_with_extensions_1_1_missing_party_scale.json  tenders_records_1_record_with_invalid_extensions.json  tenders_releases_1_release_with_all_invalid_extensions.json  tenders_releases_2_releases.json  (+14 more)
cove_project/: context_processors.py  settings.py  urls.py  wsgi.py
docs/: architecture.rst  conf.py  how-to-add-a-validation-check.rst  how-to-add-kfi.rst  how-to-config-frontend.rst  how-to-edit-stylesheet.rst  index.rst  ocds-show.rst  requirements.txt  template-structure.rst  tests.rst  translations.rst
tests/: __init__.py  conftest.py  test_functional.py  test_general.py  test_hypothesis.py  test_input.py  test_util.py  test_validation_errors.py  test_views.py
(+103 files in other folders)
