[project]
name = "cove-ocds"
version = "0.0.0"

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "C901", "COM812", "D203", "D212", "D415", "EM", "ISC001", "PERF203", "PLR091", "Q000",
    "D1",
    "PTH",
    "S308",  # mark_safe
]
allowed-confusables = ["’"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["copyright"]

[tool.ruff.lint.flake8-self]
extend-ignore-names = [
  "_get_schema_deprecated_paths",
  "_get_schema_non_required_ids",
  "_test_override_package_schema",
]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["D100", "INP001"]
"{*/signals,*/views,*/migrations/*}.py" = ["ARG001"]
"{*/admin,*/routers,*/views,*/commands/*}.py" = ["ARG002"]
"{*/admin,*/forms,*/models,*/routers,*/migrations/*,tests/*}.py" = ["RUF012"]
"*/migrations/*" = ["E501"]
"tests/*" = [
    "D", "FBT003", "INP001", "PLR2004", "PT", "S", "TRY003",
    "ARG001",  # fixtures
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'cove_project.settings'
